refactor: AttendanceAssembler에서 Book 객체를 직접 생성하는 것이 아니라 Map을 반환하도록 변경
- 출석부에서는 크루 이름이 없으면 추가해야하고, 비즈니스로직에서는 예외를 반환해야하는 차이점을 고려해 만들어진 Map을 주입받도록 변경함